--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shapely import LineString,Point, BufferCapStyle, BufferJoinStyle,MultiPoint\n",
+    "from shapely import LineString,Point, BufferCapStyle, BufferJoinStyle,MultiPoint, Point\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
     "\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m c\u001b[38;5;241m=\u001b[39mPoint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mbuffer(\u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mboundary\n\u001b[1;32m      2\u001b[0m l \u001b[38;5;241m=\u001b[39m LineString([Point(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m),Point(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m),Point(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m), Point(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m10\u001b[39m)])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(MultiPoint(\u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintersection\u001b[49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m))\n",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m c\u001b[38;5;241m=\u001b[39mPoint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mbuffer(\u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mboundary\n\u001b[1;32m      2\u001b[0m l \u001b[38;5;241m=\u001b[39m LineString([Point(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m),Point(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m),Point(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m), Point(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m10\u001b[39m)])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(MultiPoint(\u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintersection\u001b[49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m))\n",
       "\u001b[0;31mTypeError\u001b[0m: 'MultiPoint' object is not subscriptable"
      ]
     }
@@ -62,6 +62,69 @@
     "c=Point(0,0).buffer(5).boundary\n",
     "l = LineString([Point(-10,-10),Point(0,0),Point(2,2), Point(10,10)])\n",
     "print(MultiPoint(c.intersection(l)[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class OrientedPoint(Point):\n",
+    "    def __init__(self, x: float, y: float, theta: float = 0.0):\n",
+    "        super.__init__(self, x, y)\n",
+    "        self.theta = theta\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_Point(cls, point: Point, theta: float = 0):\n",
+    "        return cls(point.x, point.y, theta)\n",
+    "\n",
+    "    def __add__(self, p:object)->object:\n",
+    "        return OrientedPoint(\n",
+    "            self.__point.x + p.x, self.__point.y + p.y, self.theta + p.theta\n",
+    "        )\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Point(x={self.__point.x}, y={self.__point.y}, theta={self.theta})\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<POINT Z (1 2 60)>, <POINT (1 3)>)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'Point' and 'Point'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m ps \u001b[38;5;241m=\u001b[39m MultiPoint([p2,p3])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(nearest_points(p1,ps))\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mp1\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mp4\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Point' and 'Point'"
+     ]
+    }
+   ],
+   "source": [
+    "from shapely.ops import nearest_points\n",
+    "\n",
+    "p1 = OrientedPoint(1,2,60)\n",
+    "p4 = OrientedPoint(1,0,10)\n",
+    "p2 = Point(1,3)\n",
+    "p3 = Point(1,4)\n",
+    "ps = MultiPoint([p2,p3])\n",
+    "print(nearest_points(p1,ps))\n",
+    "print(p1+p4)"
    ]
   }
  ],
