Implement new OrientedPoint (inheritance from Point)

--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -66,65 +66,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class OrientedPoint(Point):\n",
-    "    def __init__(self, x: float, y: float, theta: float = 0.0):\n",
-    "        super.__init__(self, x, y)\n",
-    "        self.theta = theta\n",
+    "from typing import Any, ClassVar, Dict, Tuple\n",
     "\n",
-    "    @classmethod\n",
-    "    def from_Point(cls, point: Point, theta: float = 0):\n",
-    "        return cls(point.x, point.y, theta)\n",
+    "class PropertyPoint(Point):\n",
     "\n",
-    "    def __add__(self, p:object)->object:\n",
-    "        return OrientedPoint(\n",
-    "            self.__point.x + p.x, self.__point.y + p.y, self.theta + p.theta\n",
-    "        )\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = Point.__slots__  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    name: str  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(self, coord: Tuple[float, float], name: str) -> None:\n",
+    "        self._id_to_attrs[id(self)] = dict(name=name)\n",
+    "\n",
+    "    def __new__(cls, coord: Tuple[float, float], *args, **kwargs) -> \"PropertyPoint\":\n",
+    "        point = super().__new__(cls, coord)\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[id(self)]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return PropertyPoint._id_to_attrs[id(self)][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        return f\"Point(x={self.__point.x}, y={self.__point.y}, theta={self.theta})\"\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return self.__str__()\n"
+    "        return f\"{self.name}, {self.wkt}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class OrientedPoint(Point):\n",
+    "\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = (\n",
+    "        Point.__slots__\n",
+    "    )  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    theta: float  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(\n",
+    "        self, coord: Tuple[float, float], theta: float = 0.0\n",
+    "    ) -> (\n",
+    "        None\n",
+    "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
+    "        self._id_to_attrs[id(self)] = dict(theta=theta)\n",
+    "\n",
+    "    def __new__(cls, coord: Tuple[float, float], *args, **kwargs) -> \"OrientedPoint\":\n",
+    "        point = super().__new__(cls, coord)\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[id(self)]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return OrientedPoint._id_to_attrs[id(self)][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<POINT Z (1 2 60)>, <POINT (1 3)>)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'Point' and 'Point'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m ps \u001b[38;5;241m=\u001b[39m MultiPoint([p2,p3])\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(nearest_points(p1,ps))\n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mp1\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mp4\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'Point' and 'Point'"
+      "demo, POINT (1 2)\n",
+      "demo\n",
+      "POINT (1 2), theta: 10\n",
+      "10 1.0\n",
+      "True\n",
+      "True\n",
+      "(<POINT (1 2)>, <POINT (5 6)>)\n"
      ]
     }
    ],
    "source": [
     "from shapely.ops import nearest_points\n",
+    "from shapely import Polygon\n",
     "\n",
-    "p1 = OrientedPoint(1,2,60)\n",
-    "p4 = OrientedPoint(1,0,10)\n",
-    "p2 = Point(1,3)\n",
-    "p3 = Point(1,4)\n",
-    "ps = MultiPoint([p2,p3])\n",
-    "print(nearest_points(p1,ps))\n",
-    "print(p1+p4)"
+    "demo = PropertyPoint((1,2),\"demo\")\n",
+    "p1 = OrientedPoint((1,2),theta=10)\n",
+    "p2 = Point(5,6)\n",
+    "p3 = Point(5,7)\n",
+    "print(demo)\n",
+    "print(demo.name)\n",
+    "print(p1)\n",
+    "print(p1.theta, p1.x)\n",
+    "\n",
+    "poly = Polygon([[-10,-10],[-10,10],[10,10],[10,-10]])\n",
+    "print(poly.contains(p2))\n",
+    "print(poly.contains(p1))\n",
+    "print(nearest_points(p1, MultiPoint([p2,p3])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POINT (1 2)\n",
+      "POINT (5 6)\n",
+      "MULTIPOINT (1 2, 5 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MultiPoint (needs theta optional in constructor, because it re-constructs its elements):\n",
+    "coll = MultiPoint([p1,p2])\n",
+    "print(coll.geoms[0])\n",
+    "print(coll.geoms[1])\n",
+    "\n",
+    "print(coll)\n"
    ]
   }
  ],
