Fix OrientedPoint old usages

--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -72,6 +72,7 @@
    "source": [
     "from typing import Any, ClassVar, Dict, Tuple\n",
     "\n",
+    "# Example from https://github.com/shapely/shapely/issues/1233\n",
     "class PropertyPoint(Point):\n",
     "\n",
     "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +197,7 @@
     }
    ],
    "source": [
-    "# MultiPoint (needs theta optional in constructor, because it re-constructs its elements):\n",
+    "# MultiPoint (needs theta optional in constructor, because it re-constructs its elements; for example, doesn't work with he example class):\n",
     "coll = MultiPoint([p1,p2])\n",
     "print(coll.geoms[0])\n",
     "print(coll.geoms[1])\n",
