--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -43,30 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'MultiPoint' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m c\u001b[38;5;241m=\u001b[39mPoint(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mbuffer(\u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mboundary\n\u001b[1;32m      2\u001b[0m l \u001b[38;5;241m=\u001b[39m LineString([Point(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m),Point(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m),Point(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m), Point(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m10\u001b[39m)])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(MultiPoint(\u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintersection\u001b[49m\u001b[43m(\u001b[49m\u001b[43ml\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m))\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'MultiPoint' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POINT (3.5355339059327378 3.5355339059327378)\n"
      ]
     }
    ],
    "source": [
     "c=Point(0,0).buffer(5).boundary\n",
     "l = LineString([Point(-10,-10),Point(0,0),Point(2,2), Point(10,10)])\n",
-    "print(MultiPoint(c.intersection(l)[0]))"
+    "print(MultiPoint(c.intersection(l)).geoms[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +141,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class OrientedPoint2(Point):\n",
+    "\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = (\n",
+    "        Point.__slots__\n",
+    "    )  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    theta: float  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(\n",
+    "        self, coord: Tuple[float, float], theta: float = 0.0\n",
+    "    ) -> (\n",
+    "        None\n",
+    "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
+    "        self._id_to_attrs[str(id(self))] = dict(theta=theta)\n",
+    "\n",
+    "    def __new__(cls, coord: Tuple[float, float], *args, **kwargs) -> \"OrientedPoint2\":\n",
+    "        point = super().__new__(cls, coord)\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[str(id(self))]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return OrientedPoint2._id_to_attrs[str(id(self))][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class OrientedPoint3(Point):\n",
+    "\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = (\n",
+    "        Point.__slots__\n",
+    "    )  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    theta: float  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,x:float|Tuple[float, float],y:float|None=None, theta: float = 0.0\n",
+    "    ) -> (\n",
+    "        None\n",
+    "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
+    "        self._id_to_attrs[id(self)] = dict(theta=(theta if not isinstance(x,Tuple) else y))\n",
+    "\n",
+    "    def __new__(cls, x:float|Tuple[float, float],y:float|None=None, *args, **kwargs) -> \"OrientedPoint3\":\n",
+    "        if isinstance(x,Tuple):\n",
+    "            point = super().__new__(cls, x)\n",
+    "        else:\n",
+    "            point = super().__new__(cls, x,y)\n",
+    "\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[id(self)]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return OrientedPoint3._id_to_attrs[id(self)][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +239,7 @@
       "demo, POINT (1 2)\n",
       "demo\n",
       "POINT (1 2), theta: 10\n",
-      "10 1.0\n",
+      "1.0 2.0 10\n",
       "True\n",
       "True\n",
       "(<POINT (1 2)>, <POINT (5 6)>)\n"
@@ -167,13 +251,15 @@
     "from shapely import Polygon\n",
     "\n",
     "demo = PropertyPoint((1,2),\"demo\")\n",
-    "p1 = OrientedPoint((1,2),theta=10)\n",
+    "p1 = OrientedPoint3((1,2),10)\n",
+    "\n",
     "p2 = Point(5,6)\n",
     "p3 = Point(5,7)\n",
     "print(demo)\n",
     "print(demo.name)\n",
     "print(p1)\n",
-    "print(p1.theta, p1.x)\n",
+    "\n",
+    "print(p1.x, p1.y, p1.theta)\n",
     "\n",
     "poly = Polygon([[-10,-10],[-10,10],[10,10],[10,-10]])\n",
     "print(poly.contains(p2))\n",
@@ -183,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +283,94 @@
     }
    ],
    "source": [
-    "# MultiPoint (needs theta optional in constructor, because it re-constructs its elements; for example, doesn't work with he example class):\n",
+    "# MultiPoint (needs theta optional in constructor, because it re-constructs its elements; for example, doesn't work with the example class):\n",
+    "p1copy = Point(p1)\n",
     "coll = MultiPoint([p1,p2])\n",
     "print(coll.geoms[0])\n",
     "print(coll.geoms[1])\n",
     "\n",
     "print(coll)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple ok\n",
+      "OrientedPoint not fully valid: 'int' object is not iterable\n",
+      "Tuple ok\n",
+      "OrientedPoint2 not fully valid: 'int' object is not iterable\n",
+      "Tuple ok\n",
+      "x,y ok\n",
+      "Operations ok\n",
+      "OrientedPoint3 fully valid!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for PointType in [OrientedPoint,OrientedPoint2,OrientedPoint3]:\n",
+    "    try:\n",
+    "        # Using tuples coords\n",
+    "        p1 = PointType((1,2),3)\n",
+    "        assert p1.x == 1 and p1.y==2 and p1.theta==3\n",
+    "        p1coll = MultiPoint([p1,p1])\n",
+    "        print(\"Tuple ok\")\n",
+    "\n",
+    "        # Using x,y coords\n",
+    "        p2 = PointType(4,5,6)\n",
+    "        assert p2.x == 4 and p2.y==5 and p2.theta==6\n",
+    "        p2coll = MultiPoint([p2,p2])\n",
+    "        print(\"x,y ok\")\n",
+    "\n",
+    "        assert nearest_points(p1coll,p2coll)[0].distance(p2)==p2.distance(p1)\n",
+    "        print(\"Operations ok\")\n",
+    "\n",
+    "        print(f\"{PointType.__name__} fully valid!\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"{PointType.__name__} not fully valid: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.285191040980862\n",
+      "25.725254667020636\n",
+      "26.85962062497856\n",
+      "29.74834441699204\n",
+      "29.412098041997524\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The version with explicit conversion to string for dict keys (which solves an ide warning) is a bit slower •`_´•\n",
+    "# The version that supports both tuple and x,y,theta parameters is also a bit slower\n",
+    "\n",
+    "import timeit\n",
+    "\n",
+    "setup_base = \"from __main__ import Point as PointType\"\n",
+    "setup = \"from __main__ import OrientedPoint as PointType\"\n",
+    "setup2 = \"from __main__ import OrientedPoint2 as PointType\"\n",
+    "setup3 = \"from __main__ import OrientedPoint3 as PointType\"\n",
+    "statement_base = \"p=PointType((13.24,2.5421))\"\n",
+    "statement_tuple = \"p=PointType((13.24,2.5421), 10.0)\"\n",
+    "statement_xy = \"p=PointType((13.24,2.5421), 10.0)\"\n",
+    "print(timeit.timeit(stmt=statement_base, setup=setup_base, number=10000000))\n",
+    "print(timeit.timeit(stmt=statement_tuple, setup=setup, number=10000000))\n",
+    "print(timeit.timeit(stmt=statement_tuple, setup=setup2, number=10000000))\n",
+    "print(timeit.timeit(stmt=statement_tuple, setup=setup3, number=10000000))\n",
+    "print(timeit.timeit(stmt=statement_xy, setup=setup3, number=10000000))"
    ]
   }
  ],
