Add back OrientedPoint.from_point

--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,12 +224,16 @@
     "            raise AttributeError(str(e)) from None\n",
     "\n",
     "    def __str__(self) -> str:\n",
-    "        return f\"{self.wkt}, theta: {self.theta}\"\n"
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_Point(cls, point: Point, theta: float = 0.0):\n",
+    "        return cls((point.x, point.y), theta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +259,7 @@
     "\n",
     "p2 = Point(5,6)\n",
     "p3 = Point(5,7)\n",
+    "pFrom = OrientedPoint3.from_Point(p3)\n",
     "print(demo)\n",
     "print(demo.name)\n",
     "print(p1)\n",
