--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class OrientedPoint(Point):\n",
+    "class OrientedPoint1(Point):\n",
     "\n",
     "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
     "\n",
@@ -121,7 +121,7 @@
     "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
     "        self._id_to_attrs[id(self)] = dict(theta=theta)\n",
     "\n",
-    "    def __new__(cls, coord: Tuple[float, float], *args, **kwargs) -> \"OrientedPoint\":\n",
+    "    def __new__(cls, coord: Tuple[float, float], *args, **kwargs) -> \"OrientedPoint1\":\n",
     "        point = super().__new__(cls, coord)\n",
     "        point.__class__ = cls\n",
     "        return point\n",
@@ -131,7 +131,7 @@
     "\n",
     "    def __getattr__(self, name: str) -> Any:\n",
     "        try:\n",
-    "            return OrientedPoint._id_to_attrs[id(self)][name]\n",
+    "            return OrientedPoint1._id_to_attrs[id(self)][name]\n",
     "        except KeyError as e:\n",
     "            raise AttributeError(str(e)) from None\n",
     "\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class OrientedPoint4(Point):\n",
+    "\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = (\n",
+    "        Point.__slots__\n",
+    "    )  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    theta: float  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,x_or_coords:float|Tuple[float, float],y:float|None=None, theta: float = 0.0\n",
+    "    ) -> (\n",
+    "        None\n",
+    "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
+    "        self._id_to_attrs[str(id(self))] = dict(theta=(theta if not isinstance(x_or_coords,Tuple) else (0.0 if y is None else y)))\n",
+    "\n",
+    "    def __new__(cls, x_or_coords:float|Tuple[float, float],y:float|None=None, *args, **kwargs) -> \"OrientedPoint4\":\n",
+    "        if isinstance(x_or_coords,Tuple):\n",
+    "            point = super().__new__(cls, x_or_coords)\n",
+    "        else:\n",
+    "            point = super().__new__(cls, x_or_coords,y)\n",
+    "\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[str(id(self))]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return OrientedPoint4._id_to_attrs[str(id(self))][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_Point(cls, point: Point, theta: float = 0.0):\n",
+    "        return cls((point.x, point.y), theta)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,28 +357,35 @@
      "output_type": "stream",
      "text": [
       "Tuple ok\n",
-      "OrientedPoint not fully valid: 'int' object is not iterable\n",
+      "OrientedPoint1 not fully valid: 'int' object is not iterable\n",
       "Tuple ok\n",
       "OrientedPoint2 not fully valid: 'int' object is not iterable\n",
+      "OrientedPoint3 not fully valid: Tuple with default theta: theta=None\n",
       "Tuple ok\n",
       "x,y ok\n",
       "Operations ok\n",
-      "OrientedPoint3 fully valid!\n"
+      "OrientedPoint4 fully valid!\n"
      ]
     }
    ],
    "source": [
-    "for PointType in [OrientedPoint,OrientedPoint2,OrientedPoint3]:\n",
+    "for PointType in [OrientedPoint1,OrientedPoint2,OrientedPoint3, OrientedPoint4]:\n",
     "    try:\n",
     "        # Using tuples coords\n",
     "        p1 = PointType((1,2),3)\n",
-    "        assert p1.x == 1 and p1.y==2 and p1.theta==3\n",
+    "        assert p1.x == 1 and p1.y==2 and p1.theta==3, \"Tuple with explicit theta\"\n",
+    "        p1coll = MultiPoint([p1,p1])\n",
+    "        p1 = PointType((1,2))\n",
+    "        assert p1.x == 1 and p1.y==2 and p1.theta==0, f\"Tuple with default theta: theta={p1.theta}\"\n",
     "        p1coll = MultiPoint([p1,p1])\n",
     "        print(\"Tuple ok\")\n",
     "\n",
     "        # Using x,y coords\n",
     "        p2 = PointType(4,5,6)\n",
-    "        assert p2.x == 4 and p2.y==5 and p2.theta==6\n",
+    "        assert p2.x == 4 and p2.y==5 and p2.theta==6, \"Separate with explicit theta\"\n",
+    "        p2coll = MultiPoint([p2,p2])\n",
+    "        p2 = PointType(4,5)\n",
+    "        assert p2.x == 4 and p2.y==5 and p2.theta==0, \"Separate with default theta\"\n",
     "        p2coll = MultiPoint([p2,p2])\n",
     "        print(\"x,y ok\")\n",
     "\n",
@@ -343,31 +400,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22.285191040980862\n",
-      "25.725254667020636\n",
-      "26.85962062497856\n",
-      "29.74834441699204\n",
-      "29.412098041997524\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m statement_tuple \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp=PointType((13.24,2.5421), 10.0)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     13\u001b[0m statement_xy \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp=PointType((13.24,2.5421), 10.0)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtimeit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstmt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstatement_base\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msetup\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msetup_base\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumber\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000000\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(timeit\u001b[38;5;241m.\u001b[39mtimeit(stmt\u001b[38;5;241m=\u001b[39mstatement_tuple, setup\u001b[38;5;241m=\u001b[39msetup, number\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000000\u001b[39m))\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(timeit\u001b[38;5;241m.\u001b[39mtimeit(stmt\u001b[38;5;241m=\u001b[39mstatement_tuple, setup\u001b[38;5;241m=\u001b[39msetup2, number\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000000\u001b[39m))\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.11/3.11.8/Frameworks/Python.framework/Versions/3.11/lib/python3.11/timeit.py:237\u001b[0m, in \u001b[0;36mtimeit\u001b[0;34m(stmt, setup, timer, number, globals)\u001b[0m\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtimeit\u001b[39m(stmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpass\u001b[39m\u001b[38;5;124m\"\u001b[39m, setup\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpass\u001b[39m\u001b[38;5;124m\"\u001b[39m, timer\u001b[38;5;241m=\u001b[39mdefault_timer,\n\u001b[1;32m    235\u001b[0m            number\u001b[38;5;241m=\u001b[39mdefault_number, \u001b[38;5;28mglobals\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    236\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Convenience function to create Timer object and call timeit method.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 237\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mTimer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstmt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msetup\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mglobals\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.11/3.11.8/Frameworks/Python.framework/Versions/3.11/lib/python3.11/timeit.py:180\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[0;34m(self, number)\u001b[0m\n\u001b[1;32m    178\u001b[0m gc\u001b[38;5;241m.\u001b[39mdisable()\n\u001b[1;32m    179\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 180\u001b[0m     timing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gcold:\n",
+      "File \u001b[0;32m<timeit-src>:6\u001b[0m, in \u001b[0;36minner\u001b[0;34m(_it, _timer)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/shapely/geometry/point.py:78\u001b[0m, in \u001b[0;36mPoint.__new__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39missubdtype(coords\u001b[38;5;241m.\u001b[39mdtype, np\u001b[38;5;241m.\u001b[39mnumber):\n\u001b[1;32m     77\u001b[0m     coords \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mfloat\u001b[39m(c) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m coords]\n\u001b[0;32m---> 78\u001b[0m geom \u001b[38;5;241m=\u001b[39m \u001b[43mshapely\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoints\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(geom, Point):\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid values passed to Point constructor\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/shapely/decorators.py:77\u001b[0m, in \u001b[0;36mmultithreading_enabled.<locals>.wrapped\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m arr \u001b[38;5;129;01min\u001b[39;00m array_args:\n\u001b[1;32m     76\u001b[0m         arr\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mwriteable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m---> 77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m arr, old_flag \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(array_args, old_flags):\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/shapely/creation.py:74\u001b[0m, in \u001b[0;36mpoints\u001b[0;34m(coords, y, z, indices, out, **kwargs)\u001b[0m\n\u001b[1;32m     72\u001b[0m coords \u001b[38;5;241m=\u001b[39m _xyz_to_coords(coords, y, z)\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m indices \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoints\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m simple_geometries_1d(coords, indices, GeometryType\u001b[38;5;241m.\u001b[39mPOINT, out\u001b[38;5;241m=\u001b[39mout)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "# The version with explicit conversion to string for dict keys (which solves an ide warning) is a bit slower •`_´•\n",
-    "# The version that supports both tuple and x,y,theta parameters is also a bit slower\n",
+    "# The version that supports both (x,y),theta and x,y,theta parameters is also a bit slower\n",
     "\n",
     "import timeit\n",
     "\n",
     "setup_base = \"from __main__ import Point as PointType\"\n",
-    "setup = \"from __main__ import OrientedPoint as PointType\"\n",
+    "setup = \"from __main__ import OrientedPoint1 as PointType\"\n",
     "setup2 = \"from __main__ import OrientedPoint2 as PointType\"\n",
     "setup3 = \"from __main__ import OrientedPoint3 as PointType\"\n",
+    "setup4 = \"from __main__ import OrientedPoint4 as PointType\"\n",
     "statement_base = \"p=PointType((13.24,2.5421))\"\n",
     "statement_tuple = \"p=PointType((13.24,2.5421), 10.0)\"\n",
     "statement_xy = \"p=PointType((13.24,2.5421), 10.0)\"\n",
@@ -375,7 +439,8 @@
     "print(timeit.timeit(stmt=statement_tuple, setup=setup, number=10000000))\n",
     "print(timeit.timeit(stmt=statement_tuple, setup=setup2, number=10000000))\n",
     "print(timeit.timeit(stmt=statement_tuple, setup=setup3, number=10000000))\n",
-    "print(timeit.timeit(stmt=statement_xy, setup=setup3, number=10000000))"
+    "print(timeit.timeit(stmt=statement_xy, setup=setup3, number=10000000))\n",
+    "print(timeit.timeit(stmt=statement_tuple, setup=setup4, number=10000000))"
    ]
   }
  ],
