--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -603,6 +603,136 @@
     "\n",
     "print(compute_go_to_destination(Point(0,0),Point(3,0).buffer(10),2, False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POINT (1 1), theta: 0\n",
+      "MULTIPOINT (0.0000012682724605 1.001592652916487, 3 1)\n",
+      "3.14\n",
+      "0.0\n",
+      "[3.14, 0.0]\n",
+      "-3.131592986903128\n",
+      "-3.131592986903128\n"
+     ]
+    }
+   ],
+   "source": [
+    "from shapely import MultiPoint, Point, distance\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from typing import Any, ClassVar, Dict, Tuple\n",
+    "\n",
+    "\n",
+    "class OrientedPoint(Point):\n",
+    "\n",
+    "    _id_to_attrs: ClassVar[Dict[str, Any]] = {}\n",
+    "\n",
+    "    __slots__ = (\n",
+    "        Point.__slots__\n",
+    "    )  # slots must be the same for assigning __class__ - https://stackoverflow.com/a/52140968\n",
+    "\n",
+    "    theta: float  # For documentation generation and static type checking\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        x_or_coords: float | Tuple[float, float],\n",
+    "        y: float | None = None,\n",
+    "        theta: float = 0.0,\n",
+    "    ) -> (\n",
+    "        None\n",
+    "    ):  # if theta is not optional or if the structure of the arguments change (eg: self, x, y, theta) then MultiPoint becomes impossible with OrientedPoint\n",
+    "        self._id_to_attrs[str(id(self))] = dict(\n",
+    "            theta=(\n",
+    "                theta\n",
+    "                if not isinstance(x_or_coords, Tuple)\n",
+    "                else (0.0 if y is None else y)\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    def __new__(\n",
+    "        cls,\n",
+    "        x_or_coords: float | Tuple[float, float],\n",
+    "        y_or_theta: float | None = None,\n",
+    "        *args,\n",
+    "        **kwargs,\n",
+    "    ) -> \"OrientedPoint\":\n",
+    "        if isinstance(x_or_coords, Tuple):\n",
+    "            point = super().__new__(cls, x_or_coords)\n",
+    "        else:\n",
+    "            point = super().__new__(cls, x_or_coords, y_or_theta)\n",
+    "\n",
+    "        point.__class__ = cls\n",
+    "        return point\n",
+    "\n",
+    "    def __del__(self) -> None:\n",
+    "        del self._id_to_attrs[str(id(self))]\n",
+    "\n",
+    "    def __getattr__(self, name: str) -> Any:\n",
+    "        try:\n",
+    "            return OrientedPoint._id_to_attrs[str(id(self))][name]\n",
+    "        except KeyError as e:\n",
+    "            raise AttributeError(str(e)) from None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"{self.wkt}, theta: {self.theta}\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.__str__()\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_Point(cls, point: Point, theta: float = 0.0):\n",
+    "        return cls((point.x, point.y), theta)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def pol_to_abs_cart(odometrie, polars: np.ndarray) -> MultiPoint:\n",
+    "    return MultiPoint(\n",
+    "        [\n",
+    "            (\n",
+    "                odometrie.x\n",
+    "                + np.cos(odometrie.theta + polars[i, 0])\n",
+    "                * polars[i, 1],\n",
+    "                odometrie.y\n",
+    "                + np.sin(odometrie.theta + polars[i, 0])\n",
+    "                * polars[i, 1],\n",
+    "            )\n",
+    "            for i in range(len(polars))\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "def get_ennemy_angle(ennemy_position, odometrie) -> float | None:\n",
+    "    if ennemy_position == None:\n",
+    "        return None\n",
+    "\n",
+    "    angle = (\n",
+    "        math.atan2(ennemy_position.y - odometrie.y,ennemy_position.x - odometrie.x)\n",
+    "        ) - odometrie.theta\n",
+    "\n",
+    "    print(angle)\n",
+    "    if angle > math.pi:\n",
+    "        angle -= 2 * math.pi\n",
+    "\n",
+    "    if angle < -math.pi:\n",
+    "        angle += 2 * math.pi\n",
+    "\n",
+    "    return angle\n",
+    "\n",
+    "odo = OrientedPoint((1,1),0)\n",
+    "print(odo)\n",
+    "\n",
+    "pol1 = np.array([[3.14,1],[0,2]])\n",
+    "cart1=pol_to_abs_cart(odo,pol1)\n",
+    "print(cart1)\n",
+    "print([get_ennemy_angle(p,odo) for p in cart1.geoms])\n",
+    "print(get_ennemy_angle(Point(0,0),OrientedPoint(1,0.01)))"
+   ]
   }
  ],
  "metadata": {
