Cleaner Utils.geom_to_str for Multi geoms

--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -733,6 +733,42 @@
     "print([get_ennemy_angle(p,odo) for p in cart1.geoms])\n",
     "print(get_ennemy_angle(Point(0,0),OrientedPoint(1,0.01)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[(1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1), (1, 1)]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from shapely import Geometry, MultiPoint, Point\n",
+    "\n",
+    "def geom_to_str(geom: Geometry):\n",
+    "\tr = \"\"\n",
+    "\tif isinstance(geom, Point):\n",
+    "\t\tr = str((round(geom.x), round(geom.y)))\n",
+    "\n",
+    "\telse:\n",
+    "\t\ttry:\n",
+    "\t\t\tr = \"[\"+\", \".join([geom_to_str(smaller_geom) for smaller_geom in geom.geoms])+\"]\"\n",
+    "\n",
+    "\t\texcept:\n",
+    "\t\t\tr = str(geom)\n",
+    "\n",
+    "\treturn r\n",
+    "\n",
+    "geom_to_str(MultiPoint([Point(1,1) for _ in range(20)]))"
+   ]
   }
  ],
  "metadata": {
