Implement go_and_drop_to_gardener Custom return to leave room for PAMIs

--- a/common/arena/demo_shapely_buffer.ipynb
+++ b/common/arena/demo_shapely_buffer.ipynb
@@ -769,6 +769,27 @@
     "\n",
     "geom_to_str(MultiPoint([Point(1,1) for _ in range(20)]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POLYGON ((0 0, 1 0, 0 1, 1 1, 0 0))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from shapely import Polygon, Point\n",
+    "\n",
+    "a: Polygon = Polygon([Point(0,0), Point(1,0),Point(0,1),Point(1,1)])\n",
+    "\n",
+    "print(a)\n"
+   ]
   }
  ],
  "metadata": {
